@@ -1,12 +1,12 @@
 /*
- * Copyright (c) 2013-2016 Cinchapi Inc.
- * 
+ * Copyright (c) 2013-2022 Cinchapi Inc.
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -19,11 +19,9 @@ import java.net.InetAddress;
 import java.nio.ByteBuffer;
 import java.security.GeneralSecurityException;
 
-import spark.Request;
-
+import com.cinchapi.common.io.ByteBuffers;
 import com.cinchapi.concourse.security.ClientSecurity;
 import com.cinchapi.concourse.thrift.AccessToken;
-import com.cinchapi.concourse.util.ByteBuffers;
 import com.google.common.base.Strings;
 import com.google.common.hash.Hashing;
 import com.google.common.io.BaseEncoding;
@@ -45,18 +43,17 @@ public class HttpRequests {
      *         the token was encoded with and the third contains the fingerprint
      * @throws GeneralSecurityException
      */
-    public static Object[] decodeAuthToken(String token)
+    public static HttpAuthToken decodeAuthToken(String token)
             throws GeneralSecurityException {
-        ByteBuffer cryptPack = ByteBuffer.wrap(BaseEncoding.base64Url().decode(
-                token));
-        String pack = ByteBuffers.getString(ClientSecurity.decrypt(cryptPack));
+        ByteBuffer cryptPack = ByteBuffer
+                .wrap(BaseEncoding.base64Url().decode(token));
+        String pack = ByteBuffers
+                .getUtf8String(ClientSecurity.decrypt(cryptPack));
         String[] toks = pack.split("\\|");
-        Object[] parts = new Object[3];
-        parts[0] = new AccessToken(ByteBuffer.wrap(BaseEncoding.base32Hex()
-                .decode(toks[0])));
-        parts[1] = toks[1];
-        parts[2] = toks[2];
-        return parts;
+        return new HttpAuthToken(
+                new AccessToken(ByteBuffer
+                        .wrap(BaseEncoding.base32Hex().decode(toks[0]))),
+                toks[1], toks[2]);
 
     }
 
@@ -72,13 +69,13 @@ public class HttpRequests {
      * @return the encoded auth token
      */
     public static String encodeAuthToken(AccessToken token, String environment,
-            Request request) {
+            HttpRequest request) {
         String base32Token = BaseEncoding.base32Hex().encode(token.getData());
         String fingerprint = getFingerprint(request);
         String pack = base32Token + "|" + environment + "|" + fingerprint;
         ByteBuffer cryptPack = ClientSecurity.encrypt(pack);
-        String base64CryptPack = BaseEncoding.base64Url().encode(
-                ByteBuffers.toByteArray(cryptPack));
+        String base64CryptPack = BaseEncoding.base64Url()
+                .encode(ByteBuffers.getByteArray(cryptPack));
         return base64CryptPack;
     }
 
@@ -89,7 +86,8 @@ public class HttpRequests {
      * @param request
      * @return the client fingerprint
      */
-    public static String getFingerprint(Request request) {
+    @SuppressWarnings("deprecation")
+    public static String getFingerprint(HttpRequest request) {
         StringBuilder sb = new StringBuilder();
         sb.append(getUserAgent(request));
         sb.append(getIpAddress(request));
@@ -103,7 +101,7 @@ public class HttpRequests {
      * @param request - the client's request
      * @return the client IP address
      */
-    public static String getIpAddress(Request request) {
+    public static String getIpAddress(HttpRequest request) {
         String ip = request.ip();
         try {
             InetAddress address = InetAddress.getByName(ip);
@@ -123,7 +121,7 @@ public class HttpRequests {
      * @param request - the client's request
      * @return the client user agent
      */
-    public static String getUserAgent(Request request) {
+    public static String getUserAgent(HttpRequest request) {
         String userAgent = request.headers("User-Agent");
         if(Strings.isNullOrEmpty(userAgent)) {
             userAgent = "idk";
